--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.0.0.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
